# Opti-GEMM

./: .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md  bench  main
benchmarks/: bench_kernels.cu  benchmark_gemm.cpp
include/: MatrixLib.h
include/cuda/: cuda_check.cuh  gemm_naive.cuh  gemm_regblock.cuh  gemm_tiled.cuh  gemm_warptile.cuh
src/: MatrixLib.cpp
src/cuda/: gemm_naive.cu  gemm_regblock.cu  gemm_tiled.cu  gemm_warptile.cu
tests/: correctness.cu  test_matrix.cpp
